--- a/Application/app/src/main/AndroidManifest.xml
+++ b/Application/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="m.tri.facedetectcamera">
+    package="a.kulikov.bmstuproject">
 
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="a.kulikov.bmstuproject.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,7 +25,7 @@
         </activity>
 
         <activity
-            android:name=".activity.FaceDetectGrayActivity"
+            android:name="a.kulikov.bmstuproject.activity.FaceDetectGrayActivity"
             android:screenOrientation="fullSensor" />
 
     </application>
